tests/error/output_errors/measurement_array_hint.err
Error: Unsupported output value type (at $FILE:12:4)
   | 
10 |     q = array(qubit(), qubit())
11 |     m = measure_array(q)
12 |     output("m", m)
   |     ^^^^^^^^^^^^^^ Values of type `Measurement` cannot be passed to `output`
   |                    directly

Help: Use `collect_measurements()` on the array to get an array of bools (this
will block execution until all the measurement results are available)

Note: Available overloads are:
  def output(tag: str @comptime, value: int) -> None
  def output(tag: str @comptime, value: nat) -> None
  def output(tag: str @comptime, value: bool) -> None
  def output(tag: str @comptime, value: float) -> None
  def output(tag: str @comptime, value: array[int, n]) -> None
  def output(tag: str @comptime, value: array[nat, n]) -> None
  def output(tag: str @comptime, value: array[bool, n]) -> None
  def output(tag: str @comptime, value: array[float, n]) -> None

Guppy compilation failed due to 1 previous error
